--- a/demo/package.json
+++ b/demo/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@smallstoneaps/linked-list-demo",
-  "version": "1.1.0",
+  "name": "@rebble/linked-list-demo",
+  "version": "1.2.0",
   "author": "Matthew Tole",
   "description": "Demo app to show the basic usage of the linked-list package",
   "main": "src/demo.c",
@@ -10,7 +10,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@smallstoneapps/linked-list": "../"
+    "@rebble/linked-list": "../"
   },
   "keywords": [
     "pebble-app"
@@ -35,7 +35,8 @@
       "basalt",
       "chalk",
       "diorite",
-      "emery"
+      "emery",
+      "flint"
     ],
     "capabilities": []
   }
